fix nav bar click collapse

--- a/src/modules/app/css/_app.scss
+++ b/src/modules/app/css/_app.scss
@@ -230,7 +230,7 @@ select-arrows{
 
         li{
 
-          padding:20px 0px 20px 0px;
+          // padding:20px 0px 20px 0px;
            &.active{
             background-color: $light-green;
            }
